--- a/app/client/stylesheets/components/pu-ratings.sass
+++ b/app/client/stylesheets/components/pu-ratings.sass
@@ -34,6 +34,8 @@
 
     .pu-avatar-stack
         float: left
+        &:before
+            display: none
 
     .pu-avatar
         position: relative
